--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 /* Header and Navigation */
 
 .container {
@@ -47,3 +51,51 @@ nav {
 }
 
 /* Introduction */
+
+.main-banner {
+  background-color: #DCDCDC;
+  margin: 0 auto;
+}
+
+.main-banner .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.west-side {
+  width: 50%;
+}
+
+.east-side {
+  width: 370px;
+}
+
+.west-side img {
+  width: 100%;
+  padding: 1.25rem 1rem;
+}
+
+.tagline {
+  height: auto;
+  padding-top: 5rem;
+  display: flex;
+  justify-content: left;
+  flex-direction: column;
+}
+
+.tagline a {
+  background-color: #383838;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+
+h1 {
+  color: #383838;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+h4 {
+  color: #383838;
+}
